--- a/books.bib
+++ b/books.bib
@@ -36,10 +36,19 @@
       primaryClass={cs.CR}
 }
 
-@misc{semaphore_pse_dev,
-  title = {{Semaphore - Platform for Systems Engineering}},
-  author = {{PSE Group}},
-  howpublished = {\url{https://semaphore.pse.dev}},
-  year = {2024},
-  note = {Accessed: 19/03/2024}
+@misc{semaphore_protocol_github,
+  title = {Semaphore: A zero-knowledge protocol for anonymous signaling on Ethereum},
+  howpublished = {\url{https://github.com/semaphore-protocol/semaphore}},
+  note = {Accessed: 2024-03-19}
+}
+
+@article{fazekas2023semaphore,
+  author = {Fazekas, Laszlo},
+  title = {Brief Introduction of Semaphore, a Zero-knowledge Group Membership Protocol},
+  journal = {HackerNoon},
+  year = {2023},
+  month = {October},
+  day = {30},
+  url = {https://hackernoon.com/brief-introduction-of-semaphore-a-zero-knowledge-group-membership-protocol},
+  note = {Accessed: 2024-03-19}
 }
