--- a/wp.tex
+++ b/wp.tex
@@ -280,7 +280,7 @@ Architecure is consisted of several essential parts:
   A nullifier in our system is a cryptographic marker used to prevent duplicate claims or actions. 
   Based on Semaphore \href{https://semaphore.pse.dev/} as a zero-knowledge protocol that allows to cast a message (endorsement in this case).
   It's a key element for user privacy and security, allowing action verification without revealing 
-  user identities. \cite{semaphore_pse_dev}
+  user identities. \cite{semaphore_protocol_github} \cite{fazekas2023semaphore}
 
   \item[Provision]
   The Provision process offers an innovative approach for companies to initiate token-related activities without needing an existing ERC-20 coin. 
